results/SVCOMP/0-shot/log-array_iteration01-2024_03_18_22_49_50.txt
public class array_iteration01 {

  //@ requires index >= 0 && index < 200;
  //@ ensures \result == -1 || \result == 0 || \result == 1;
  public static int f(int index) {
    int[] ia = new int[200];
    if(0 > index || index >= ia.length) return -1;
    ia[index] = Verifier.nondetInt();
    //@ loop_invariant 0 <= i && i <= ia.length;
    //@ loop_invariant (\forall int j; 0 <= j && j < i; ia[j] != 0);
    for (int i = 0; i < ia.length; i++) {
      if (ia[i] == 0)
        return 0;
      ;
    }
    return 1;
  }
}
/home/max/Documents/JMLGPT/tmp/array_iteration01.java:8: error: cannot find symbol
    ia[index] = Verifier.nondetInt();
                ^
  symbol:   variable Verifier
  location: class array_iteration01
1 error

